src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ002_DTZ002.py.snap
---
source: src/rules/flake8_datetimez/mod.rs
expression: diagnostics
---
- kind:
    CallDatetimeToday: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 25
  fix: ~
  parent: ~
- kind:
    CallDatetimeToday: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 16
  fix: ~
  parent: ~

