src/rules/flake8_datetimez/snapshots/ruff__rules__flake8_datetimez__tests__DTZ004_DTZ004.py.snap
---
source: src/rules/flake8_datetimez/mod.rs
expression: diagnostics
---
- kind:
    CallDatetimeUtcfromtimestamp: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 40
  fix: ~
  parent: ~
- kind:
    CallDatetimeUtcfromtimestamp: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 31
  fix: ~
  parent: ~

